# mcp_napcat_QQspace

./: .gitignore  README.md  mcp_settings.json  pyproject.toml  run_direct.py  start.sh
config/template/: config.toml
skills/: openaianthropic.md
src/qqspace_mcp/: __init__.py  __main__.py  config.py  cookie.py  qzone_api.py  server.py
