[project]
name = "qqspace-mcp"
version = "0.1.0"
description = "MCP server for QQ Space operations (send feeds, read feeds, like, comment, reply)"
authors = [
    {name = "MCPHub Community"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "bs4>=0.0.1",
    "json5>=0.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
qqspace-mcp = "qqspace_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
image = [
    "openai>=1.0.0",
    "requests>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qqspace_mcp"]

[tool.hatch.build.targets.sdist]
packages = ["src/qqspace_mcp"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
